test/runtime/fail/fn/missing_arg.hy

// expect error: Expected identifier in function declaration arguments, found `)`

fn test(hello, ) {
	// ...
}
